--- a/prijateli_tree/app/languages/mk.json
+++ b/prijateli_tree/app/languages/mk.json
@@ -1,91 +1,91 @@
 {
-    "mk": {
-        "util": {
-            "player": "Играч",
-            "blue": "СИНА",
-            "red": "ЦРВЕНА",
-            "or": "или",
-            "next": "Следно"
-        },
-        "header": {
-            "official_game": "Официјална Игра",
-            "round": "Рунда",
-            "practice": "Игра за вежбање",
-            "score": "Резултат"
-        },
-        "ready_to_play": {
-            "welcome": "Добредојдовте!",
-            "select_student": "Изберете го името на играчот кој ќе седне на овој компјутер",
-            "get_ready": "Подгответе се да играте црвено или сино!",
-            "im_ready": "Спремен/на сум!"
-        },
-        "intro_practice": {
-            "now_you_will_play": "Сега ќе играте 2 игри за вежбање за да се навикнете на правилата.",
-            "since_these_rules": "Бидејќи ова се рунди за вежбање, нема да наградиме никого за нивниот настап."
-        },
-        "game": {
-            "the_computer_chose": "Компјутерот избра торба и ги подели топчињата по случаен избор на секој играч.",
-            "your_information": "Компјутерот ти покажува:",
-            "your_ball": "Твоето топче:",
-            "guess_color": "Погодете ја бојата на торбата:",
-            "see_what_others_guessed": "Погледнете што погодија некои други играчи во последната рунда:",
-            "your_previous_guess": "Твојата претпоставка во предходната рунда:"
-        },
-        "waiting_screen": {
-            "waiting": "Ги чекаме другите..."
-        },
-        "game_results": {
-            "better_luck": "Подобра среќа следниот пат!",
-            "the_computer_chose": "Комјутерот избра:",
-            "your_guess": "Твојата последна претпоставка:",
-            "you_won": "Победи!"
-        },
-        "real_game_intro": {
-            "now_we_practiced": "Сега по вежбата ќе ги играме вистинските игри.",
-            "get_ready": "Подгответе се да победите и да заработите пари!",
-            "if_you_win": " Ако победите во оваа игра, {X} поени ќе бидат додадени на вашиот резултат и конечната награда. ",
-            "added_points": "{X} поени ќе бидат додадени на вашата последна награда."
-        },
-        "final_score": {
-            "ask_your_teachers": "Прашајте ги вашите наставници околу добивањето на вашата награда!",
-            "congratulations": "Секоја чест!",
-            "denars": "{X} денари!",
-            "you_guessed_correctly": "Погодивте правилно во {X} игри и добивте {x} поени, што значи дека сте стекнале дополнителни"
-        },
-        "thanks_screen": {
-            "have_a_great_day": "Имајте убав ден!",
-            "thanks": "Ви благодариме што игравте!"
-        },
-        "admin_panel": {
-            "for_admin_only": "Ако се обидувате да пристапите до предодредена игра, обратете се кај координаторот на играта",
-            "create_session": "Ако сте Администратор кој сака да креира сесија или да додаде играчи, кликнете на овој линк:",
-            "firstname": "Име",
-            "lastname": "Презиме",
-            "email": "Е-маил",
-            "new_session": "Нова Сесија",
-            "copy_to_clipboard": "Копирај (Copy)",
-            "logout": "Одјави се",
-            "players": "Играчи",
-            "number_of_games": "Број на Игра",
-            "copy_url": "Копирај URL линк",
-            "facilitator_password": "Пасворд на фацилитатор",
-            "facilitator_username": "Корисничко име на фацилитатор",
-            "facilitators": "Само за фацилитатори!",
-            "login": "Логин",
-            "school": "Училиште",
-            "student_language": "Јазик на ученикот",
-            "student_name": "Име и презиме",
-            "session_and_game_created": "Вашата сесија (ID: {Y}) и прва игра (ID: {X}) се креирани! ",
-            "success": "Успех:",
-            "session_created": "Вашата сесија (ID: {Y}) е креирана!"
-        },
-        "different_game_choices": {
-            "now_you_can_observe": "Сега можете да ги изберете играчите што ќе ги набљудувате во следните рунди во оваа игра.",
-            "please_choose_players": "Ве молиме изберете {X} играчи."
-        },
-        "different_game_intro": {
-            "different_version": "Сега ќе играме друга верзија на играта.",
-            "instead_of": "Наместо да ви ги доделиме врсниците што ги набљудувате по случаен избор, ќе ви дозволиме да ги изберете играчите што ги набљудувате."
-        }
+  "mk": {
+    "admin_panel": {
+      "copy_to_clipboard": "\u041a\u043e\u043f\u0438\u0440\u0430\u0458 (Copy)",
+      "copy_url": "\u041a\u043e\u043f\u0438\u0440\u0430\u0458 URL \u043b\u0438\u043d\u043a",
+      "create_session": "\u0410\u043a\u043e \u0441\u0442\u0435 \u0410\u0434\u043c\u0438\u043d\u0438\u0441\u0442\u0440\u0430\u0442\u043e\u0440 \u043a\u043e\u0458 \u0441\u0430\u043a\u0430 \u0434\u0430 \u043a\u0440\u0435\u0438\u0440\u0430 \u0441\u0435\u0441\u0438\u0458\u0430 \u0438\u043b\u0438 \u0434\u0430 \u0434\u043e\u0434\u0430\u0434\u0435 \u0438\u0433\u0440\u0430\u0447\u0438, \u043a\u043b\u0438\u043a\u043d\u0435\u0442\u0435 \u043d\u0430 \u043e\u0432\u043e\u0458 \u043b\u0438\u043d\u043a:",
+      "email": "\u0415-\u043c\u0430\u0438\u043b",
+      "facilitator_password": "\u041f\u0430\u0441\u0432\u043e\u0440\u0434 \u043d\u0430 \u0444\u0430\u0446\u0438\u043b\u0438\u0442\u0430\u0442\u043e\u0440",
+      "facilitator_username": "\u041a\u043e\u0440\u0438\u0441\u043d\u0438\u0447\u043a\u043e \u0438\u043c\u0435 \u043d\u0430 \u0444\u0430\u0446\u0438\u043b\u0438\u0442\u0430\u0442\u043e\u0440",
+      "facilitators": "\u0421\u0430\u043c\u043e \u0437\u0430 \u0444\u0430\u0446\u0438\u043b\u0438\u0442\u0430\u0442\u043e\u0440\u0438!",
+      "firstname": "\u0418\u043c\u0435",
+      "for_admin_only": "\u0410\u043a\u043e \u0441\u0435 \u043e\u0431\u0438\u0434\u0443\u0432\u0430\u0442\u0435 \u0434\u0430 \u043f\u0440\u0438\u0441\u0442\u0430\u043f\u0438\u0442\u0435 \u0434\u043e \u043f\u0440\u0435\u0434\u043e\u0434\u0440\u0435\u0434\u0435\u043d\u0430 \u0438\u0433\u0440\u0430, \u043e\u0431\u0440\u0430\u0442\u0435\u0442\u0435 \u0441\u0435 \u043a\u0430\u0458 \u043a\u043e\u043e\u0440\u0434\u0438\u043d\u0430\u0442\u043e\u0440\u043e\u0442 \u043d\u0430 \u0438\u0433\u0440\u0430\u0442\u0430",
+      "lastname": "\u041f\u0440\u0435\u0437\u0438\u043c\u0435",
+      "login": "\u041b\u043e\u0433\u0438\u043d",
+      "logout": "\u041e\u0434\u0458\u0430\u0432\u0438 \u0441\u0435",
+      "new_session": "\u041d\u043e\u0432\u0430 \u0421\u0435\u0441\u0438\u0458\u0430",
+      "number_of_games": "\u0411\u0440\u043e\u0458 \u043d\u0430 \u0418\u0433\u0440\u0430",
+      "players": "\u0418\u0433\u0440\u0430\u0447\u0438",
+      "school": "\u0423\u0447\u0438\u043b\u0438\u0448\u0442\u0435",
+      "session_and_game_created": "\u0412\u0430\u0448\u0430\u0442\u0430 \u0441\u0435\u0441\u0438\u0458\u0430 (ID: {Y}) \u0438 \u043f\u0440\u0432\u0430 \u0438\u0433\u0440\u0430 (ID: {X}) \u0441\u0435 \u043a\u0440\u0435\u0438\u0440\u0430\u043d\u0438! ",
+      "session_created": "\u0412\u0430\u0448\u0430\u0442\u0430 \u0441\u0435\u0441\u0438\u0458\u0430 (ID: {Y}) \u0435 \u043a\u0440\u0435\u0438\u0440\u0430\u043d\u0430!",
+      "student_language": "\u0408\u0430\u0437\u0438\u043a \u043d\u0430 \u0443\u0447\u0435\u043d\u0438\u043a\u043e\u0442",
+      "student_name": "\u0418\u043c\u0435 \u0438 \u043f\u0440\u0435\u0437\u0438\u043c\u0435",
+      "success": "\u0423\u0441\u043f\u0435\u0445:"
+    },
+    "different_game_choices": {
+      "now_you_can_observe": "\u0421\u0435\u0433\u0430 \u043c\u043e\u0436\u0435\u0442\u0435 \u0434\u0430 \u0433\u0438 \u0438\u0437\u0431\u0435\u0440\u0435\u0442\u0435 \u0438\u0433\u0440\u0430\u0447\u0438\u0442\u0435 \u0448\u0442\u043e \u045c\u0435 \u0433\u0438 \u043d\u0430\u0431\u0459\u0443\u0434\u0443\u0432\u0430\u0442\u0435 \u0432\u043e \u0441\u043b\u0435\u0434\u043d\u0438\u0442\u0435 \u0440\u0443\u043d\u0434\u0438 \u0432\u043e \u043e\u0432\u0430\u0430 \u0438\u0433\u0440\u0430.",
+      "please_choose_players": "\u0412\u0435 \u043c\u043e\u043b\u0438\u043c\u0435 \u0438\u0437\u0431\u0435\u0440\u0435\u0442\u0435 {X} \u0438\u0433\u0440\u0430\u0447\u0438."
+    },
+    "different_game_intro": {
+      "different_version": "\u0421\u0435\u0433\u0430 \u045c\u0435 \u0438\u0433\u0440\u0430\u043c\u0435 \u0434\u0440\u0443\u0433\u0430 \u0432\u0435\u0440\u0437\u0438\u0458\u0430 \u043d\u0430 \u0438\u0433\u0440\u0430\u0442\u0430.",
+      "instead_of": "\u041d\u0430\u043c\u0435\u0441\u0442\u043e \u0434\u0430 \u0432\u0438 \u0433\u0438 \u0434\u043e\u0434\u0435\u043b\u0438\u043c\u0435 \u0432\u0440\u0441\u043d\u0438\u0446\u0438\u0442\u0435 \u0448\u0442\u043e \u0433\u0438 \u043d\u0430\u0431\u0459\u0443\u0434\u0443\u0432\u0430\u0442\u0435 \u043f\u043e \u0441\u043b\u0443\u0447\u0430\u0435\u043d \u0438\u0437\u0431\u043e\u0440, \u045c\u0435 \u0432\u0438 \u0434\u043e\u0437\u0432\u043e\u043b\u0438\u043c\u0435 \u0434\u0430 \u0433\u0438 \u0438\u0437\u0431\u0435\u0440\u0435\u0442\u0435 \u0438\u0433\u0440\u0430\u0447\u0438\u0442\u0435 \u0448\u0442\u043e \u0433\u0438 \u043d\u0430\u0431\u0459\u0443\u0434\u0443\u0432\u0430\u0442\u0435."
+    },
+    "final_score": {
+      "ask_your_teachers": "\u041f\u0440\u0430\u0448\u0430\u0458\u0442\u0435 \u0433\u0438 \u0432\u0430\u0448\u0438\u0442\u0435 \u043d\u0430\u0441\u0442\u0430\u0432\u043d\u0438\u0446\u0438 \u043e\u043a\u043e\u043b\u0443 \u0434\u043e\u0431\u0438\u0432\u0430\u045a\u0435\u0442\u043e \u043d\u0430 \u0432\u0430\u0448\u0430\u0442\u0430 \u043d\u0430\u0433\u0440\u0430\u0434\u0430!",
+      "congratulations": "\u0421\u0435\u043a\u043e\u0458\u0430 \u0447\u0435\u0441\u0442!",
+      "denars": "{X} \u0434\u0435\u043d\u0430\u0440\u0438!",
+      "you_guessed_correctly": "\u041f\u043e\u0433\u043e\u0434\u0438\u0432\u0442\u0435 \u043f\u0440\u0430\u0432\u0438\u043b\u043d\u043e \u0432\u043e {X} \u0438\u0433\u0440\u0438 \u0438 \u0434\u043e\u0431\u0438\u0432\u0442\u0435 {x} \u043f\u043e\u0435\u043d\u0438, \u0448\u0442\u043e \u0437\u043d\u0430\u0447\u0438 \u0434\u0435\u043a\u0430 \u0441\u0442\u0435 \u0441\u0442\u0435\u043a\u043d\u0430\u043b\u0435 \u0434\u043e\u043f\u043e\u043b\u043d\u0438\u0442\u0435\u043b\u043d\u0438"
+    },
+    "game": {
+      "guess_color": "\u041f\u043e\u0433\u043e\u0434\u0435\u0442\u0435 \u0458\u0430 \u0431\u043e\u0458\u0430\u0442\u0430 \u043d\u0430 \u0442\u043e\u0440\u0431\u0430\u0442\u0430:",
+      "see_what_others_guessed": "\u041f\u043e\u0433\u043b\u0435\u0434\u043d\u0435\u0442\u0435 \u0448\u0442\u043e \u043f\u043e\u0433\u043e\u0434\u0438\u0458\u0430 \u043d\u0435\u043a\u043e\u0438 \u0434\u0440\u0443\u0433\u0438 \u0438\u0433\u0440\u0430\u0447\u0438 \u0432\u043e \u043f\u043e\u0441\u043b\u0435\u0434\u043d\u0430\u0442\u0430 \u0440\u0443\u043d\u0434\u0430:",
+      "the_computer_chose": "\u041a\u043e\u043c\u043f\u0458\u0443\u0442\u0435\u0440\u043e\u0442 \u0438\u0437\u0431\u0440\u0430 \u0442\u043e\u0440\u0431\u0430 \u0438 \u0433\u0438 \u043f\u043e\u0434\u0435\u043b\u0438 \u0442\u043e\u043f\u0447\u0438\u045a\u0430\u0442\u0430 \u043f\u043e \u0441\u043b\u0443\u0447\u0430\u0435\u043d \u0438\u0437\u0431\u043e\u0440 \u043d\u0430 \u0441\u0435\u043a\u043e\u0458 \u0438\u0433\u0440\u0430\u0447.",
+      "your_ball": "\u0422\u0432\u043e\u0435\u0442\u043e \u0442\u043e\u043f\u0447\u0435:",
+      "your_information": "\u041a\u043e\u043c\u043f\u0458\u0443\u0442\u0435\u0440\u043e\u0442 \u0442\u0438 \u043f\u043e\u043a\u0430\u0436\u0443\u0432\u0430:",
+      "your_previous_guess": "\u0422\u0432\u043e\u0458\u0430\u0442\u0430 \u043f\u0440\u0435\u0442\u043f\u043e\u0441\u0442\u0430\u0432\u043a\u0430 \u0432\u043e \u043f\u0440\u0435\u0434\u0445\u043e\u0434\u043d\u0430\u0442\u0430 \u0440\u0443\u043d\u0434\u0430:"
+    },
+    "game_results": {
+      "better_luck": "\u041f\u043e\u0434\u043e\u0431\u0440\u0430 \u0441\u0440\u0435\u045c\u0430 \u0441\u043b\u0435\u0434\u043d\u0438\u043e\u0442 \u043f\u0430\u0442!",
+      "the_computer_chose": "\u041a\u043e\u043c\u0458\u0443\u0442\u0435\u0440\u043e\u0442 \u0438\u0437\u0431\u0440\u0430:",
+      "you_won": "\u041f\u043e\u0431\u0435\u0434\u0438!",
+      "your_guess": "\u0422\u0432\u043e\u0458\u0430\u0442\u0430 \u043f\u043e\u0441\u043b\u0435\u0434\u043d\u0430 \u043f\u0440\u0435\u0442\u043f\u043e\u0441\u0442\u0430\u0432\u043a\u0430:"
+    },
+    "header": {
+      "official_game": "\u041e\u0444\u0438\u0446\u0438\u0458\u0430\u043b\u043d\u0430 \u0418\u0433\u0440\u0430",
+      "practice": "\u0418\u0433\u0440\u0430 \u0437\u0430 \u0432\u0435\u0436\u0431\u0430\u045a\u0435",
+      "round": "\u0420\u0443\u043d\u0434\u0430",
+      "score": "\u0420\u0435\u0437\u0443\u043b\u0442\u0430\u0442"
+    },
+    "intro_practice": {
+      "now_you_will_play": "\u0421\u0435\u0433\u0430 \u045c\u0435 \u0438\u0433\u0440\u0430\u0442\u0435 2 \u0438\u0433\u0440\u0438 \u0437\u0430 \u0432\u0435\u0436\u0431\u0430\u045a\u0435 \u0437\u0430 \u0434\u0430 \u0441\u0435 \u043d\u0430\u0432\u0438\u043a\u043d\u0435\u0442\u0435 \u043d\u0430 \u043f\u0440\u0430\u0432\u0438\u043b\u0430\u0442\u0430.",
+      "since_these_rules": "\u0411\u0438\u0434\u0435\u0458\u045c\u0438 \u043e\u0432\u0430 \u0441\u0435 \u0440\u0443\u043d\u0434\u0438 \u0437\u0430 \u0432\u0435\u0436\u0431\u0430\u045a\u0435, \u043d\u0435\u043c\u0430 \u0434\u0430 \u043d\u0430\u0433\u0440\u0430\u0434\u0438\u043c\u0435 \u043d\u0438\u043a\u043e\u0433\u043e \u0437\u0430 \u043d\u0438\u0432\u043d\u0438\u043e\u0442 \u043d\u0430\u0441\u0442\u0430\u043f."
+    },
+    "ready_to_play": {
+      "get_ready": "\u041f\u043e\u0434\u0433\u043e\u0442\u0432\u0435\u0442\u0435 \u0441\u0435 \u0434\u0430 \u0438\u0433\u0440\u0430\u0442\u0435 \u0446\u0440\u0432\u0435\u043d\u043e \u0438\u043b\u0438 \u0441\u0438\u043d\u043e!",
+      "im_ready": "\u0421\u043f\u0440\u0435\u043c\u0435\u043d/\u043d\u0430 \u0441\u0443\u043c!",
+      "select_student": "\u0418\u0437\u0431\u0435\u0440\u0435\u0442\u0435 \u0433\u043e \u0438\u043c\u0435\u0442\u043e \u043d\u0430 \u0438\u0433\u0440\u0430\u0447\u043e\u0442 \u043a\u043e\u0458 \u045c\u0435 \u0441\u0435\u0434\u043d\u0435 \u043d\u0430 \u043e\u0432\u043e\u0458 \u043a\u043e\u043c\u043f\u0458\u0443\u0442\u0435\u0440",
+      "welcome": "\u0414\u043e\u0431\u0440\u0435\u0434\u043e\u0458\u0434\u043e\u0432\u0442\u0435!"
+    },
+    "real_game_intro": {
+      "added_points": "{X} \u043f\u043e\u0435\u043d\u0438 \u045c\u0435 \u0431\u0438\u0434\u0430\u0442 \u0434\u043e\u0434\u0430\u0434\u0435\u043d\u0438 \u043d\u0430 \u0432\u0430\u0448\u0430\u0442\u0430 \u043f\u043e\u0441\u043b\u0435\u0434\u043d\u0430 \u043d\u0430\u0433\u0440\u0430\u0434\u0430.",
+      "get_ready": "\u041f\u043e\u0434\u0433\u043e\u0442\u0432\u0435\u0442\u0435 \u0441\u0435 \u0434\u0430 \u043f\u043e\u0431\u0435\u0434\u0438\u0442\u0435 \u0438 \u0434\u0430 \u0437\u0430\u0440\u0430\u0431\u043e\u0442\u0438\u0442\u0435 \u043f\u0430\u0440\u0438!",
+      "if_you_win": " \u0410\u043a\u043e \u043f\u043e\u0431\u0435\u0434\u0438\u0442\u0435 \u0432\u043e \u043e\u0432\u0430\u0430 \u0438\u0433\u0440\u0430, {X} \u043f\u043e\u0435\u043d\u0438 \u045c\u0435 \u0431\u0438\u0434\u0430\u0442 \u0434\u043e\u0434\u0430\u0434\u0435\u043d\u0438 \u043d\u0430 \u0432\u0430\u0448\u0438\u043e\u0442 \u0440\u0435\u0437\u0443\u043b\u0442\u0430\u0442 \u0438 \u043a\u043e\u043d\u0435\u0447\u043d\u0430\u0442\u0430 \u043d\u0430\u0433\u0440\u0430\u0434\u0430. ",
+      "now_we_practiced": "\u0421\u0435\u0433\u0430 \u043f\u043e \u0432\u0435\u0436\u0431\u0430\u0442\u0430 \u045c\u0435 \u0433\u0438 \u0438\u0433\u0440\u0430\u043c\u0435 \u0432\u0438\u0441\u0442\u0438\u043d\u0441\u043a\u0438\u0442\u0435 \u0438\u0433\u0440\u0438."
+    },
+    "thanks_screen": {
+      "have_a_great_day": "\u0418\u043c\u0430\u0458\u0442\u0435 \u0443\u0431\u0430\u0432 \u0434\u0435\u043d!",
+      "thanks": "\u0412\u0438 \u0431\u043b\u0430\u0433\u043e\u0434\u0430\u0440\u0438\u043c\u0435 \u0448\u0442\u043e \u0438\u0433\u0440\u0430\u0432\u0442\u0435!"
+    },
+    "util": {
+      "blue": "\u0421\u0418\u041d\u0410",
+      "next": "\u0421\u043b\u0435\u0434\u043d\u043e",
+      "or": "\u0438\u043b\u0438",
+      "player": "\u0418\u0433\u0440\u0430\u0447",
+      "red": "\u0426\u0420\u0412\u0415\u041d\u0410"
+    },
+    "waiting_screen": {
+      "waiting": "\u0413\u0438 \u0447\u0435\u043a\u0430\u043c\u0435 \u0434\u0440\u0443\u0433\u0438\u0442\u0435..."
     }
+  }
 }
