--- a/prijateli_tree/app/languages/tr.json
+++ b/prijateli_tree/app/languages/tr.json
@@ -1,91 +1,91 @@
 {
-    "tr": {
-        "util": {
-            "player": "Oyuncu",
-            "blue": "MAVİ",
-            "red": "KIRMIZI",
-            "or": "veya",
-            "next": "Sonraki"
-        },
-        "header": {
-            "official_game": "missing",
-            "round": "Yuvarlak",
-            "practice": "missing",
-            "score": "Skor"
-        },
-        "ready_to_play": {
-            "welcome": "missing",
-            "select_student": "missing",
-            "get_ready": "Kırmızı mı Mavi mi oynamaya hazır olun!",
-            "im_ready": "Ben hazırm!"
-        },
-        "intro_practice": {
-            "now_you_will_play": "Şimdi kurallara alışmak için 2 alıştırma oyunu oynayacaksınız.",
-            "since_these_rules": "Bunlar alıştırma turları olduğu için kimseyi performansından dolayı ödüllendirmeyeceğiz."
-        },
-        "game": {
-            "the_computer_chose": "Bilgisayar bir torba seçti ve topları her oyuncuya rastgele bölüştürdü.",
-            "your_information": "missing",
-            "your_ball": "missing",
-            "guess_color": "Torbanın rengini tahmin edin:",
-            "see_what_others_guessed": "Son turda diğer bazı oyuncuların neler tahmin ettiğini görün:",
-            "your_previous_guess": "missing"
-        },
-        "waiting_screen": {
-            "waiting": "Başkalarını bekliyorum..."
-        },
-        "game_results": {
-            "better_luck": "Bir dahaki sefere iyi şanslar!",
-            "the_computer_chose": "missing",
-            "your_guess": "missing",
-            "you_won": "Kazandın! "
-        },
-        "real_game_intro": {
-            "now_we_practiced": "Artık antrenman yaptığımıza göre gerçek oyunları oynayacağız.",
-            "get_ready": "Kazanmaya ve para kazanmaya hazır olun!",
-            "if_you_win": " Bu oyunu kazanırsanız puanınıza ve son ödülünüze {X} puan eklenecek. ",
-            "added_points": "Son ödülünüze {X} puan eklenecek."
-        },
-        "final_score": {
-            "ask_your_teachers": "Öğretmenlerinize ödülünüzü nasıl alacağınızı sorun!",
-            "congratulations": "Tebrikler!",
-            "denars": "{X} dinar!",
-            "you_guessed_correctly": "{X} oyunda doğru tahmin ettiniz ve {x} puan kazandınız, bu da ekstra kazandığınız anlamına geliyors."
-        },
-        "thanks_screen": {
-            "have_a_great_day": "İyi günler!",
-            "thanks": "Oynadığınız için teşekkürler!"
-        },
-        "admin_panel": {
-            "for_admin_only": "missing",
-            "create_session": "missing",
-            "firstname": "missing",
-            "lastname": "missing",
-            "email": "missing",
-            "new_session": "missing",
-            "copy_to_clipboard": "missing",
-            "logout": "missing",
-            "players": "missing",
-            "number_of_games": "missing",
-            "copy_url": "missing",
-            "facilitator_password": "missing",
-            "facilitator_username": "missing",
-            "facilitators": "missing",
-            "login": "missing",
-            "school": "missing",
-            "student_language": "missing",
-            "student_name": "missing",
-            "session_and_game_created": "missing",
-            "success": "missing",
-            "session_created": "missing"
-        },
-        "different_game_choices": {
-            "now_you_can_observe": "Artık bu oyunda ilerleyen turlarda gözlemleyeceğiniz oyuncuları seçebilirsiniz.",
-            "please_choose_players": "Lütfen {X} oyuncu seçin."
-        },
-        "different_game_intro": {
-            "different_version": "Şimdi oyunun farklı bir versiyonunu oynayacağız.",
-            "instead_of": "Gözlemlediğiniz oyuncuları size rastgele atamak yerine, gözlemlediğiniz oyuncuları seçmenize izin vereceğiz."
-        }
+  "tr": {
+    "admin_panel": {
+      "copy_to_clipboard": "missing",
+      "copy_url": "missing",
+      "create_session": "missing",
+      "email": "missing",
+      "facilitator_password": "missing",
+      "facilitator_username": "missing",
+      "facilitators": "missing",
+      "firstname": "missing",
+      "for_admin_only": "missing",
+      "lastname": "missing",
+      "login": "missing",
+      "logout": "missing",
+      "new_session": "missing",
+      "number_of_games": "missing",
+      "players": "missing",
+      "school": "missing",
+      "session_and_game_created": "missing",
+      "session_created": "missing",
+      "student_language": "missing",
+      "student_name": "missing",
+      "success": "missing"
+    },
+    "different_game_choices": {
+      "now_you_can_observe": "Art\u0131k bu oyunda ilerleyen turlarda g\u00f6zlemleyece\u011finiz oyuncular\u0131 se\u00e7ebilirsiniz.",
+      "please_choose_players": "L\u00fctfen {X} oyuncu se\u00e7in."
+    },
+    "different_game_intro": {
+      "different_version": "\u015eimdi oyunun farkl\u0131 bir versiyonunu oynayaca\u011f\u0131z.",
+      "instead_of": "G\u00f6zlemledi\u011finiz oyuncular\u0131 size rastgele atamak yerine, g\u00f6zlemledi\u011finiz oyuncular\u0131 se\u00e7menize izin verece\u011fiz."
+    },
+    "final_score": {
+      "ask_your_teachers": "\u00d6\u011fretmenlerinize \u00f6d\u00fcl\u00fcn\u00fcz\u00fc nas\u0131l alaca\u011f\u0131n\u0131z\u0131 sorun!",
+      "congratulations": "Tebrikler!",
+      "denars": "{X} dinar!",
+      "you_guessed_correctly": "{X} oyunda do\u011fru tahmin ettiniz ve {x} puan kazand\u0131n\u0131z, bu da ekstra kazand\u0131\u011f\u0131n\u0131z anlam\u0131na geliyors."
+    },
+    "game": {
+      "guess_color": "Torban\u0131n rengini tahmin edin:",
+      "see_what_others_guessed": "Son turda di\u011fer baz\u0131 oyuncular\u0131n neler tahmin etti\u011fini g\u00f6r\u00fcn:",
+      "the_computer_chose": "Bilgisayar bir torba se\u00e7ti ve toplar\u0131 her oyuncuya rastgele b\u00f6l\u00fc\u015ft\u00fcrd\u00fc.",
+      "your_ball": "missing",
+      "your_information": "missing",
+      "your_previous_guess": "missing"
+    },
+    "game_results": {
+      "better_luck": "Bir dahaki sefere iyi \u015fanslar!",
+      "the_computer_chose": "missing",
+      "you_won": "Kazand\u0131n! ",
+      "your_guess": "missing"
+    },
+    "header": {
+      "official_game": "missing",
+      "practice": "missing",
+      "round": "Yuvarlak",
+      "score": "Skor"
+    },
+    "intro_practice": {
+      "now_you_will_play": "\u015eimdi kurallara al\u0131\u015fmak i\u00e7in 2 al\u0131\u015ft\u0131rma oyunu oynayacaks\u0131n\u0131z.",
+      "since_these_rules": "Bunlar al\u0131\u015ft\u0131rma turlar\u0131 oldu\u011fu i\u00e7in kimseyi performans\u0131ndan dolay\u0131 \u00f6d\u00fcllendirmeyece\u011fiz."
+    },
+    "ready_to_play": {
+      "get_ready": "K\u0131rm\u0131z\u0131 m\u0131 Mavi mi oynamaya haz\u0131r olun!",
+      "im_ready": "Ben haz\u0131rm!",
+      "select_student": "missing",
+      "welcome": "missing"
+    },
+    "real_game_intro": {
+      "added_points": "Son \u00f6d\u00fcl\u00fcn\u00fcze {X} puan eklenecek.",
+      "get_ready": "Kazanmaya ve para kazanmaya haz\u0131r olun!",
+      "if_you_win": " Bu oyunu kazan\u0131rsan\u0131z puan\u0131n\u0131za ve son \u00f6d\u00fcl\u00fcn\u00fcze {X} puan eklenecek. ",
+      "now_we_practiced": "Art\u0131k antrenman yapt\u0131\u011f\u0131m\u0131za g\u00f6re ger\u00e7ek oyunlar\u0131 oynayaca\u011f\u0131z."
+    },
+    "thanks_screen": {
+      "have_a_great_day": "\u0130yi g\u00fcnler!",
+      "thanks": "Oynad\u0131\u011f\u0131n\u0131z i\u00e7in te\u015fekk\u00fcrler!"
+    },
+    "util": {
+      "blue": "MAV\u0130",
+      "next": "Sonraki",
+      "or": "veya",
+      "player": "Oyuncu",
+      "red": "KIRMIZI"
+    },
+    "waiting_screen": {
+      "waiting": "Ba\u015fkalar\u0131n\u0131 bekliyorum..."
     }
+  }
 }
